removed the provision for adding a background image in the weather information page. CSS file could not resolve the image while in public folder of react. Added dark mode capability

--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('https://source.unsplash.com/1600x900/?weather');
+  background-image: url('https://unsplash.com/photos/a-large-body-of-water-under-a-cloudy-sky-OCRn-1DJbIc');
   background-size: cover;
   background-position: center;
 }
